syntax = "proto3";

package com.ncirl.streaming;

option java_multiple_files = true;
option java_package = "com.ncirl.streaming.streamingclientservice";
option java_outer_classname = "StreamingClientServiceProto";

service StreamingClientService {
  // Unary RPC
  rpc sendUnaryRequest(UnaryRequest) returns (UnaryResponse);

  // Server-side streaming RPC
  rpc streamClientInformation(stream ClientInformation) returns (ServerResponse);

}

message UnaryRequest {
  string name = 1;
}

message UnaryResponse {
  string message = 1;
}

message ClientInformation {
  string clientName = 1;
  string dateTime = 2;
}

message ServerResponse {
  string message = 1;
}